<resources>
    <string name="app_name">Yes Soft Complete</string>
    <string name="card_header">Report #1 June 12 2019</string>
    <string name="more">More…</string>
    <string name="error_404">Sorry, This article was not found :(</string>
    <string name="full_news_header">Header Of the News</string>
    <string name="placeholder_text">jhasbjhsvahvasjcvsvcvscayvcusvcsvjshvjasvcjsahcvjsavcsjacvhhjacshvjjhasbjhsvahvasjcvsvcvscayvcusvcsvjshvjasvcjsahcvjsavcsjacvhhjacshvjjhasbjhsvahvasjcvsvcvscayvcusvcsvjshvjasvcjsahcvjsavcsjacvhhjacshvjjhasbjhsvahvasjcvsvcvscayvcusvcsvjshvjasvcjsahcvjsavcsjacvhhjacshvjjhasbjhsvahvasjcvsvcvscayvcusvcsvjshvjasvcjsahcvjsavcsjacvhhjacshvjjhasbjhsvahvasjcvsvcvscayvcusvcsvjshvjasvcjsahcvjsavcsjacvhhjacshvjjhasbjhsvahvasjcvsvcvscayvcusvcsvjshvjasvcjsahcvjsavcsjacvhhjacshvjjhasbjhsvahvasjcvsvcvscayvcusvcsvjshvjasvcjsahcvjsavcsjacvhhjacshvjjhasbjhsvahvasjcvsvcvscayvcusvcsvjshvjasvcjsahcvjsavcsjacvhhjacshvjjhasbjhsvahvasjcvsvcvscayvcusvcsvjshvjasvcjsahcvjsavcsjacvhhjacshvjjhasbjhsvahvasjcvsvcvscayvcusvcsvjshvjasvcjsahcvjsavcsjacvhhjacshvjjhasbjhsvahvasjcvsvcvscayvcusvcsvjshvjasvcjsahcvjsavcsjacvhhjacshvjjhasbjhsvahvasjcvsvcvscayvcusvcsvjshvjasvcjsahcvjsavcsjacvhhjacshvjjhasbjhsvahvasjcvsvcvscayvcusvcsvjshvjasvcjsahcvjsavcsjacvhhjacshvjjhasbjhsvahvasjcvsvcvscayvcusvcsvjshvjasvcjsahcvjsavcsjacvhhjacshvjjhasbjhsvahvasjcvsvcvscayvcusvcsvjshvjasvcjsahcvjsavcsjacvhhjacshvjjhasbjhsvahvasjcvsvcvscayvcusvcsvjshvjasvcjsahcvjsavcsjacvhhjacshvjjhasbjhsvahvasjcvsvcvscayvcusvcsvjshvjasvcjsahcvjsavcsjacvhhjacshvjjhasbjhsvahvasjcvsvcvscayvcusvcsvjshvjasvcjsahcvjsavcsjacvhhjacshvjjhasbjhsvahvasjcvsvcvscayvcusvcsvjshvjasvcjsahcvjsavcsjacvhhjacshvjjhasbjhsvahvasjcvsvcvscayvcusvcsvjshvjasvcjsahcvjsavcsjacvhhjacshvj</string>
    <string name="full_news_body">Body Of The News, ie. The News Report</string>
    <string name="nav_news_feed">News Feed</string>
    <string name="nav_services">Services</string>
    <string name="redirect_to_web">Read In Web Browser</string>
    <string name="unknown_error_msg">Why Are You Here??</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
</resources>
